--- a/popup.html
+++ b/popup.html
@@ -1,6 +1,4 @@
-﻿
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -13,10 +11,7 @@
   <link rel="stylesheet" href="/css/all.min.css">
 </head>
 <body id="root">
-  <textarea id="id_text" cols="50" rows="4"></textarea>
-  <h1>CeeP</h1>
-
-  
+  <h1>CeeP</h1> 
   <script src="myscript.js"></script>
   <script src="thecontent.js"></script>
 </body>
