adding help hover bars and the help text

--- a/popup.html
+++ b/popup.html
@@ -11,7 +11,16 @@
   <link rel="stylesheet" href="/css/all.min.css">
 </head>
 <body id="root">
-  <h1>CeeP</h1> 
+  <div class="nav-div">
+    <h1>CoPeee</h1>
+    <div id="help-box-text" class="abs-box"></div>
+    <div class="first-box" id="first-box-id"></div>
+    <div class="second-box">
+      <div class="small-box" id="small-box-one"></div>
+      <div class="small-box" id="small-box-two"></div>
+      <div class="small-box" id="small-box-three"></div>
+    </div>
+  </div>
   <script src="myscript.js"></script>
   <script src="thecontent.js"></script>
 </body>
